--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>smart-shop-whisperer</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Walmart Blitz - Shop at Lightning Speed</title>
+    <meta name="description" content="Experience the future of shopping with Walmart Blitz - Scan, Shop, Pay & Go at lightning speed" />
+    <meta name="author" content="Walmart Innovation Labs" />
 
-    <meta property="og:title" content="smart-shop-whisperer" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Walmart Blitz - Shop at Lightning Speed" />
+    <meta property="og:description" content="Experience the future of shopping with Walmart Blitz" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@walmart" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
